--- a/index.html.html
+++ b/index.html.html
@@ -10,6 +10,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
         </style>
+        <link rel="stylesheet" href="style.css">
     
 </head>
 
